# crazyswarm2

.github/workflows/: ci-docs2.yml  systemtests.yml  systemtests_sim.yml
crazyflie/: CMakeLists.txt
crazyflie/config/: camera_config.yaml  crazyflies.yaml  motion_capture.yaml  server.yaml  teleop.yaml
crazyflie/launch/: launch.py
crazyflie/scripts/: crazyflie_server.py  gui.py  simple_mapper_multiranger.py
crazyflie/src/: crazyflie_server.cpp  image_streamer.py
crazyflie_examples/: setup.cfg
crazyflie_examples/config/: nav2_params.yaml  slam_params.yaml
crazyflie_examples/crazyflie_examples/: LED_test.py  figure8.py  hello_world.py  infinite_flight.py  multi_trajectory.py  swap.py  swarmalator.py  swarmalator3D.py  swarmalator3D_test.py  swarmalator3D_test_draft.py  swarmalator_test.py  test.py  tracking.py
crazyflie_examples/launch/: keyboard_velmux_launch.py  multiranger_mapping_launch.py  multiranger_nav2_launch.py  multiranger_simple_mapper_launch.py
crazyflie_interfaces/: CMakeLists.txt
crazyflie_interfaces/msg/: Status.msg
crazyflie_py/crazyflie_py/: crazyflie.py  crazyswarm_py.py
crazyflie_sim/crazyflie_sim/: crazyflie_server.py  crazyflie_sil.py
crazyflie_sim/crazyflie_sim/backend/: dynobench.py  np.py
crazyflie_sim/crazyflie_sim/visualization/: pdf.py
docs2/: installation.rst  overview.rst  tutorials.rst  usage.rst
systemtests/: mcap_handler.py  plotter_class.py  save.py  settings.yaml  test_flights.py
systemtests/SDplotting/: plot.py  save.py
systemtests/SDplotting/info/: infofigure8.yaml
systemtests/info/: info_cf231_.yaml
(+1 files in other folders)
