[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
    swarmalator = crazyflie_examples.swarmalator:main
    swarmalator_test = crazyflie_examples.swarmalator_test:main
    test = crazyflie_examples.test:main